# distirc

./: .gitignore  Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: config.rs  conn.rs  main.rs
client/src/model/: buffer.rs  mod.rs
client/src/ui/: alert.rs  bar.rs  buffer.rs  entry.rs  mod.rs  util.rs  wrap.rs
common/: Cargo.toml  build.rs
common/src/: alert.rs  alert.rs.in  conn.rs  lib.rs  line.rs  line.rs.in  messages.rs  messages.rs.in  types.rs
rotor-irc/: Cargo.toml
rotor-irc/src/: lib.rs  machine.rs  message.rs  response.rs
src/: buffer.rs  config.rs  conn.rs  handle.rs  line.rs  main.rs  network.rs  types.rs  user.rs  util.rs
src/buffer/: log.rs  mod.rs
src/config/: mod.rs
src/conn/: client.rs  irc.rs  messages.rs  mod.rs
src/core/: mod.rs
src/network/: mod.rs  routing.rs  sender.rs
src/state/: mod.rs  user.rs
