[package]
name = "distirc"
version = "0.1.0"
authors = ["Forkk <forkk@forkk.net>"]
description = "An IRC client with a distributed, client-server architecture like Quassel."

[dependencies]
log = "0.3"
env_logger = "0.3"
time = "0.1"
irc = "0.11"
rustc-serialize = "0.3"
rotor = "0.6"
rotor-stream = "0.6"

[dependencies.common]
path = "common"
