[package]
name = "common"
version = "0.1.0"
authors = ["Forkk <forkk@forkk.net>"]
build = "build.rs"

[dependencies]
log = "0.3"
time = "0.1"
rotor = "0.6"
rotor-stream = "0.6"
bincode = "0.5"
byteorder = "0.5"
rustc-serialize = "0.3"
serde = "*"
serde_json = "*"
# serde_macros = "*"

[build-dependencies]
serde_codegen = "*"
syntex = "*"
